# The-Not-Financial-Advice-App

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/core/config/: settings.py
backend/app/core/db/: session.py
backend/app/models/: auth_models.py  data_models.py  document_models.py  economic_indicators_models.py  pipeline_models.py  sector_models.py  user_interaction_models.py  user_models.py
backend/docs/api/: API_CONTRACT.md
backend/docs/db/docs/: DATABASE_SCHEMA_ERD.md
backend/docs/graph/docs/: NEO4J_GRAPHITI_SCHEMA.md
backend/scripts/: models_check.py
docs/functional/: FUNCTIONAL_REQUIREMENTS.md
docs/non_functional/: NON_FUNCTIONAL_REQUIREMENTS.md
